# Sakk

./: CMakeLists.txt  CMakePresets.json  ablak.cpp  ablak.h  babu.cpp  babu.h  eltolas.cpp  eltolas.h  eredmeny.h  fenstring.cpp  fenstring.h  jatekallas.cpp  jatekallas.h  jatekos.h  lepes.cpp  lepes.h  main.cpp  poz.cpp  poz.h  sakk.cbp  sakk.depend  szamolo.cpp  szamolo.h  szin.h  tabla.cpp  tabla.h
